# yandexmusic-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: use_client.py
src/yandexmusic_mcp/: __init__.py  __main__.py  client.py  config.py  filters.py  formatters.py  middleware.py  models.py  rate_limiter.py  server.py
tests/: conftest.py  test_client.py  test_config.py  test_filters.py  test_rate_limiter.py  test_server.py
