[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yandexmusic-mcp"
version = "0.1.0"
description = "MCP server for the Yandex Music API (FastMCP v3), authenticated with a Yandex Music OAuth token"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Evgeny Gurin" }]
keywords = ["yandex-music", "mcp", "fastmcp", "music", "dj"]
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.28",
    "pydantic-settings>=2.5",
]

[project.scripts]
yandexmusic-mcp = "yandexmusic_mcp.server:main"

[project.urls]
Repository = "https://github.com/evgenygurin/yandexmusic-mcp"

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
    "mypy>=1.16",
    "ruff>=0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/yandexmusic_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["yandexmusic_mcp"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
